--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,4 @@
-.header {
+.navbar {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  margin-top: 16px;
-}
-
-.logo {
-  width: 300px;
+  justify-content: space-between;
 }
